# ai-router

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json
.cursor/: mcp.json
.cursor/rules/: codegraph.mdc
docs/: pleaseprompto-notebooklm-mcp-8a5edab282632443.txt
docs/superpowers/plans/: 2026-06-28-ai-router-mcp.md  2026-07-09-ai-router-python.md  2026-07-09-browser-event-queue.md  2026-07-10-chatgpt-adapter.md  2026-07-10-parallel-ask.md  2026-07-10-stateless-ask.md  2026-07-11-pipx-global-cli.md  2026-07-12-claude-provider.md  2026-07-18-deepseek-provider.md  2026-07-19-kimi-provider.md
docs/superpowers/specs/: 2026-06-28-ai-router-mcp-design.md  2026-07-09-ai-router-python-design.md  2026-07-09-browser-event-queue-design.md  2026-07-10-chatgpt-adapter-design.md  2026-07-10-parallel-ask-design.md  2026-07-10-pipx-global-cli-design.md  2026-07-10-stateless-ask-design.md  2026-07-12-claude-provider-design.md  2026-07-18-deepseek-provider-design.md  2026-07-19-kimi-provider-design.md
src/: cli.ts  errors.ts  logger.ts  server.ts
src/adapters/: chatgpt-network.ts  chatgpt.ts  gemini.ts  helpers.ts  notebooklm.ts  registry.ts  types.ts
src/ai_router/: config.py  errors.py  logger.py
src/ai_router/adapters/: base.py  registry.py
src/ai_router/adapters/chatgpt/: adapter.py  planner.py  selectors.py  stream.py  wait.py
src/ai_router/adapters/claude/: adapter.py  planner.py  selectors.py  stream.py  wait.py
src/ai_router/adapters/deepseek/: adapter.py  planner.py  selectors.py  stream.py  wait.py
src/ai_router/adapters/gemini/: adapter.py  planner.py  selectors.py  wait.py
src/ai_router/adapters/kimi/: adapter.py  planner.py  selectors.py  stream.py  wait.py
src/ai_router/browser/: cloak.py  commands.py  events.py  manager.py  page_queue.py  page_router.py  page_worker.py  profile.py  state.py
src/ai_router/cli/: browser.py  main.py  serve.py
src/ai_router/mcp/: server.py  tools.py  transport.py
src/ai_router/router/: resolve.py
src/ai_router/session/: manager.py
src/browser/: headless.ts  manager.ts
src/config/: defaults.ts  load-config.ts  types.ts
src/mcp/: register-tools.ts
src/router/: resolve-provider.ts
src/tools/: ask.ts  list-providers.ts  login.ts  session-status.ts
tests/: test_ask_multi.py  test_chatgpt_planner.py  test_cli_serve.py  test_cli_version.py  test_command_executor.py  test_command_waits.py  test_commands_generating.py  test_commands_new_chat.py  test_config.py  test_deepseek_planner.py  test_deepseek_stream.py  test_deepseek_wait.py  test_events_kimi_bytes.py  test_gemini_input.py  test_gemini_planner.py  test_gemini_wait.py  test_kimi_planner.py  test_kimi_stream.py  test_kimi_wait.py  test_packaging.py  test_page_queue.py  test_page_router.py  test_registry.py  test_router.py  test_session.py  test_state_reducer.py  test_tools_stateless.py  test_transport.py
tests/browser/: manager.test.ts
tests/config/: load-config.test.ts
tests/router/: resolve-provider.test.ts
