[tool.poetry]
name = "ai-router"
version = "0.1.0"
description = "MCP server routing prompts to web AI providers via CloakBrowser"
authors = []
readme = "README.md"
packages = [{ include = "ai_router", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
typer = { extras = ["all"], version = "^0.15" }
cloakbrowser = "^0.1"
mcp = "^1.6"
uvicorn = "^0.30"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.24"
ruff = "^0.6"

[tool.poetry.scripts]
ai = "ai_router.cli.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src"]
