[tool.poetry]
name = "mcp-ai-router"
version = "0.1.2"
description = "MCP server (stdio) routing prompts to web AI providers via CloakBrowser — pipx install mcp-ai-router, CLI: ai-router"
authors = ["Olivier Taylor <olivier.taylor.work@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/scriptkid23/ai-router"
repository = "https://github.com/scriptkid23/ai-router"
keywords = ["mcp", "gemini", "ai", "cursor"]
packages = [{ include = "ai_router", from = "src" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.11,<4"
typer = { extras = ["all"], version = "^0.15" }
cloakbrowser = "^0.4.10"
mcp = ">=1.6,<2"
uvicorn = "^0.30"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.24"
ruff = "^0.6"

[tool.poetry.scripts]
ai-router = "ai_router.cli.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src"]
